Fix alignment of buttons on modal

--- a/src/css/UserProfilePuzzle.css
+++ b/src/css/UserProfilePuzzle.css
@@ -5,6 +5,12 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  cursor: pointer;
+}
+
+.puzzle-image:hover {
+	transition: .2s ease-in-out;
+  transform: scale(1.1);
 }
 
 .user-puzzles {
